--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,51 @@
-# Next.js
-.next
-out
+# Node / Next.js
+node_modules/
+.next/
+out/
+build/
 
-# Node packages
-node_modules
+# Env
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+.env*
+!.env.example
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Env
-.env
-.env.local
-.env.*.local
-
-# Misc
+# Editors / OS
 .DS_Store
+Thumbs.db
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+
+.idea/
+
+.devcontainer/
+coder/
+*.code-workspace
+
+# TS / build cache
+dist/
+*.tsbuildinfo
+
+.next/turbo/
+.cache/
+.cache-loader/
+
+components.json
+
+.AppleDouble
+.LSOverride
+
+*.zip
+*.tar.gz
+*.rar
